<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    tools:context=".app.ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_logo_minitwitter_white"
        app:layout_constraintBottom_toTopOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btSignUp"
        app:layout_constraintEnd_toEndOf="@+id/etMail"
        app:layout_constraintStart_toStartOf="@+id/etMail"
        app:layout_constraintTop_toBottomOf="@+id/etMail" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/btSignUp"
        android:textColor="@color/colorAzul"
        app:layout_constraintBottom_toTopOf="@+id/tvGoLogin"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvGoLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/textGoLogin"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btSignUp"
        app:layout_constraintStart_toStartOf="@+id/btSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btSignUp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintUsername"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/etMail"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>